traces/bug_339.txt
examples++-load/Element_PkEdge.cpp:305: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::P1Edgedc accesses global variable from a different translation unit: map_type|.
Showing all 5 steps of the trace


examples++-load/Element_PkEdge.cpp:305:5: initialization of Fem2D::P1Edgedc
303.       static TypeOfFE_PkEdgedc PkEdgeP5dc(5);   // a static variable to add the finite element to freefem++
304.       static AddNewFE  P0Edgedc("P0edgedc",&PkEdgeP0dc);
305.       static AddNewFE  P1Edgedc("P1edgedc",&PkEdgeP1dc);
           ^
306.       static AddNewFE  P2Edgedc("P2edgedc",&PkEdgeP2dc);
307.       static AddNewFE  P3Edgedc("P3edgedc",&PkEdgeP3dc);

examples++-load/Element_PkEdge.cpp:305:22: call to AddNewFE_AddNewFE
303.       static TypeOfFE_PkEdgedc PkEdgeP5dc(5);   // a static variable to add the finite element to freefem++
304.       static AddNewFE  P0Edgedc("P0edgedc",&PkEdgeP0dc);
305.       static AddNewFE  P1Edgedc("P1edgedc",&PkEdgeP1dc);
                            ^
306.       static AddNewFE  P2Edgedc("P2edgedc",&PkEdgeP2dc);
307.       static AddNewFE  P3Edgedc("P3edgedc",&PkEdgeP3dc);

src/fflib/AddNewFE.h:52:34: call to atype<Fem2D::TypeOfFE_*>
  50.     {
  51.       ffassert(tfe); // check 
  52.       Global.New(FEname, Type_Expr(atype<Fem2D::TypeOfFE*>() ,new  EConstantTypeOfFE(tfe)));
                                         ^
  53.     }
  54.   };

src/fflib/AFunction.hpp:339:14: call to ShowType
    337.    // basicForEachType * r=map_type[];
    338.     if (ir == map_type.end()) { cerr << "Error: aType  '" << typeid(T).name() << "', doesn't exist\n";
    339.                ShowType(cerr);
                        ^
    340.               throw(ErrorExec("exit",1));}
    341.     return ir->second;}

src/fflib/AFunction2.cpp:708:10: access to map_type|
    706.    
    707.      map<const string,basicForEachType *>::const_iterator i;
    708.      for(i=map_type.begin();i!=map_type.end();i++)
                    ^
    709.        {
    710.          f << " --"<< i->first <<" = " ; 
